add quiet flag to man pages

--- a/share/man/man1/gpo.1
+++ b/share/man/man1/gpo.1
@@ -3,7 +3,7 @@
 gpo \- Text mode interface of gPodder
 .SH SYNOPSIS
 .B gpo
-[\fI--verbose|-v\fR]
+[\fI--verbose|-v|--quiet|-q\fR]
 [\fICOMMAND\fR] [\fIparams...\fR]
 
 .SH DESCRIPTION
