--- a/share/man/man1/gpodder.1
+++ b/share/man/man1/gpodder.1
@@ -21,5 +21,8 @@ show this help message and exit
 \fB\-v\fR, \fB\-\-verbose\fR
 print logging output on the console
 .TP
+\fB\-q\fR, \fB\-\-quiet\fR
+reduce warnings on the console
+.TP
 \fB\-s\fR URL, \fB\-\-subscribe\fR=\fI\,URL\/\fR
 subscribe to the feed at URL
