update fr translation

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-14 16:08+0200\n"
-"PO-Revision-Date: 2020-04-03 18:57+0200\n"
+"PO-Revision-Date: 2020-06-14 16:21+0200\n"
 "Last-Translator: Eric Le Lay <elelay@macports.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
 "fr/)\n"
@@ -313,12 +313,10 @@ msgid "Cannot open device"
 msgstr "Impossible d'ouvrir le périphérique"
 
 #: src/gpodder/syncui.py:91
-#, fuzzy
-#| msgid "Please check the settings in the preferences dialog."
 msgid "Please check logs and the settings in the preferences dialog."
 msgstr ""
-"Veuillez vérifier les préférences de votre périphérique multimédia dans la "
-"boîte de dialogue des préférences."
+"Veuillez vérifier les logs et les préférences de votre périphérique "
+"multimédia dans la boîte de dialogue des préférences."
 
 #: src/gpodder/syncui.py:138
 msgid "Not enough space left on device"
@@ -2196,10 +2194,8 @@ msgid "Download new episodes"
 msgstr "Télécharger de nouveaux épisodes"
 
 #: share/gpodder/ui/gtk/menus.ui.h:11
-#, fuzzy
-#| msgid "Find new podcasts"
 msgid "Find Podcast"
-msgstr "Trouver des nouveaux podcasts"
+msgstr "Rechercher"
 
 #: share/gpodder/ui/gtk/menus.ui.h:12
 msgid "_Subscriptions"
@@ -2234,10 +2230,8 @@ msgid "Change delete lock"
 msgstr "Changer le verrou de suppression"
 
 #: share/gpodder/ui/gtk/menus.ui.h:28
-#, fuzzy
-#| msgid "Filter Episodes"
 msgid "Find Episode"
-msgstr "Filtrer les épisodes"
+msgstr "Rechercher"
 
 #: share/gpodder/ui/gtk/menus.ui.h:31
 msgid "Sync to device"
@@ -2257,7 +2251,7 @@ msgstr "Description de l'épisode"
 
 #: share/gpodder/ui/gtk/menus.ui.h:35
 msgid "Always show Find entries"
-msgstr ""
+msgstr "Toujours afficher les champs de recherche"
 
 #: share/gpodder/ui/gtk/menus.ui.h:37
 msgid "Hide deleted episodes"
@@ -2512,10 +2506,8 @@ msgid "print logging output on the console"
 msgstr "Afficher les messages de debug sur la sortie standard"
 
 #: bin/gpodder:104
-#, fuzzy
-#| msgid "print logging output on the console"
 msgid "reduce warnings on the console"
-msgstr "Afficher les messages de debug sur la sortie standard"
+msgstr "afficher moins de messages sur la console"
 
 #: bin/gpodder:107
 msgid "subscribe to the feed at URL"
