--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-14 16:08+0200\n"
-"PO-Revision-Date: 2020-04-22 19:13+0200\n"
+"PO-Revision-Date: 2020-06-14 16:34+0200\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -310,10 +310,8 @@ msgid "Cannot open device"
 msgstr "Kann Gerät nicht öffnen"
 
 #: src/gpodder/syncui.py:91
-#, fuzzy
-#| msgid "Please check the settings in the preferences dialog."
 msgid "Please check logs and the settings in the preferences dialog."
-msgstr "Bitte überprüfen Sie die Einstellungen."
+msgstr "Überprüfen Sie die Protokolle und Einstellungen im Einstellungsdialog."
 
 #: src/gpodder/syncui.py:138
 msgid "Not enough space left on device"
@@ -2181,10 +2179,8 @@ msgid "Download new episodes"
 msgstr "Neue Episoden herunterladen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:11
-#, fuzzy
-#| msgid "Find new podcasts"
 msgid "Find Podcast"
-msgstr "Neue Podcasts finden"
+msgstr "Podcasts finden"
 
 #: share/gpodder/ui/gtk/menus.ui.h:12
 msgid "_Subscriptions"
@@ -2219,10 +2215,8 @@ msgid "Change delete lock"
 msgstr "Löschsperre umschalten"
 
 #: share/gpodder/ui/gtk/menus.ui.h:28
-#, fuzzy
-#| msgid "Filter Episodes"
 msgid "Find Episode"
-msgstr "Filter Episoden"
+msgstr "Finde Episode"
 
 #: share/gpodder/ui/gtk/menus.ui.h:31
 msgid "Sync to device"
@@ -2242,7 +2236,7 @@ msgstr "Episoden-Beschreibungen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:35
 msgid "Always show Find entries"
-msgstr ""
+msgstr "Gefundene Einträge immer Anzeigen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:37
 msgid "Hide deleted episodes"
@@ -2494,10 +2488,8 @@ msgid "print logging output on the console"
 msgstr "Logging-Output auf die Konsole schreiben"
 
 #: bin/gpodder:104
-#, fuzzy
-#| msgid "print logging output on the console"
 msgid "reduce warnings on the console"
-msgstr "Logging-Output auf die Konsole schreiben"
+msgstr "Reduzieren von Warnungen auf der Konsole"
 
 #: bin/gpodder:107
 msgid "subscribe to the feed at URL"
