Updated Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-14 16:08+0200\n"
-"PO-Revision-Date: 2019-05-28 11:32+0200\n"
+"PO-Revision-Date: 2020-06-15 13:21+0200\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/gpodder/language/"
 "nl/)\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.3.1\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -139,7 +139,7 @@ msgstr "Overig"
 
 #: src/gpodder/extensions.py:100
 msgid "No description for this extension."
-msgstr "Geen omschrijving voor deze extensie."
+msgstr "Deze uitbreiding heeft geen omschrijving."
 
 #: src/gpodder/extensions.py:220
 #, python-format
@@ -154,7 +154,7 @@ msgstr "Minimaal één van de volgende opdrachten vereist: %(list_of_commands)s"
 #: src/gpodder/extensions.py:273
 #, python-format
 msgid "Python module not found: %(module)s"
-msgstr "Python-module niet gevonden: %(module)s"
+msgstr "Python-module niet aangetroffen: %(module)s"
 
 #: src/gpodder/model.py:469 src/gpodder/youtube.py:396
 #: src/gpodder/plugins/soundcloud.py:174
@@ -194,7 +194,7 @@ msgstr ""
 
 #: src/gpodder/model.py:1399
 msgid "You're advised to set it to a shorter path."
-msgstr "Wij bevelen een korter pad aan."
+msgstr "Wij raden een korter pad aan."
 
 #: src/gpodder/my.py:179
 #, python-format
@@ -216,7 +216,7 @@ msgstr "Bezig met wegschrijven van gegevens naar schijf"
 
 #: src/gpodder/sync.py:354
 msgid "Opening iPod database"
-msgstr "Bezig met openen van iPod-database"
+msgstr "Bezig met openen van iPod-databank"
 
 #: src/gpodder/sync.py:364
 msgid "iPod opened"
@@ -224,11 +224,11 @@ msgstr "iPod geopend"
 
 #: src/gpodder/sync.py:375
 msgid "Saving iPod database"
-msgstr "Bezig met opslaan van iPod-database"
+msgstr "Bezig met opslaan van iPod-databank"
 
 #: src/gpodder/sync.py:380
 msgid "Writing extended gtkpod database"
-msgstr "Bezig met wegschrijven van uitgebreide gtkpod-database"
+msgstr "Bezig met wegschrijven van uitgebreide gtkpod-databank"
 
 #: src/gpodder/sync.py:456 src/gpodder/sync.py:719 src/gpodder/sync.py:920
 #, python-format
@@ -248,7 +248,7 @@ msgstr ""
 
 #: src/gpodder/sync.py:574
 msgid "Opening MP3 player"
-msgstr "Bezig met openen van MP3-speler"
+msgstr "Bezig met openen van mp3-speler"
 
 #: src/gpodder/sync.py:577
 msgid "MP3 player opened"
@@ -273,7 +273,7 @@ msgstr "MTP-apparaat"
 
 #: src/gpodder/sync.py:835
 msgid "Opening the MTP device"
-msgstr "Bezig met openen van MTP-apparaat"
+msgstr "Bezig met openen van mtp-apparaat"
 
 #: src/gpodder/sync.py:845
 #, python-format
@@ -312,10 +312,8 @@ msgid "Cannot open device"
 msgstr "Kan apparaat niet openen"
 
 #: src/gpodder/syncui.py:91
-#, fuzzy
-#| msgid "Please check the settings in the preferences dialog."
 msgid "Please check logs and the settings in the preferences dialog."
-msgstr "Controleer de instellingen in het voorkeurenvenster."
+msgstr "Controleer de logboeken en instellingen in het voorkeurenvenster."
 
 #: src/gpodder/syncui.py:138
 msgid "Not enough space left on device"
@@ -336,7 +334,7 @@ msgstr "Bijwerken voltooid"
 
 #: src/gpodder/syncui.py:202
 msgid "The playlist on your MP3 player has been updated."
-msgstr "De afspeellijst op je MP3-speler is bijgewerkt."
+msgstr "De afspeellijst op je mp3-speler is bijgewerkt."
 
 #: src/gpodder/syncui.py:270 src/gpodder/gtkui/main.py:831
 #: src/gpodder/gtkui/main.py:994 src/gpodder/gtkui/main.py:2826
@@ -347,7 +345,7 @@ msgstr "Aflevering"
 
 #: src/gpodder/syncui.py:275
 msgid "Episodes have been deleted on device"
-msgstr "Afleveringen zijn verwijderd op apparaat"
+msgstr "Afleveringen zijn verwijderd van apparaat"
 
 #: src/gpodder/syncui.py:287
 msgid "Error writing playlist files"
@@ -445,7 +443,7 @@ msgstr "Opdracht: %s"
 
 #: src/gpodder/gtkui/desktopfile.py:156
 msgid "Default application"
-msgstr "Standaardapplicatie"
+msgstr "Standaardtoepassing"
 
 #: src/gpodder/gtkui/main.py:164 share/applications/gpodder.desktop.in.h:1
 msgid "gPodder"
@@ -458,7 +456,7 @@ msgstr "E_xtra's"
 #: src/gpodder/gtkui/main.py:341
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:10
 msgid "Extensions"
-msgstr "Extensies"
+msgstr "Uitbreidingen"
 
 #: src/gpodder/gtkui/main.py:361
 msgid "Loading incomplete downloads"
@@ -466,7 +464,7 @@ msgstr "Bezig met laden van onvolledige downloads"
 
 #: src/gpodder/gtkui/main.py:362
 msgid "Some episodes have not finished downloading in a previous session."
-msgstr "De vorige keer zijn sommige afleveringen niet volledig gedownload."
+msgstr "In de vorige sessie zijn enkele afleveringen niet volledig gedownload."
 
 #: src/gpodder/gtkui/main.py:365 bin/gpo:608
 #, python-format
@@ -481,7 +479,7 @@ msgstr "Alles hervatten"
 
 #: src/gpodder/gtkui/main.py:390
 msgid "Incomplete downloads from a previous session were found."
-msgstr "Onvolledige downloads van een vorige sessie gevonden."
+msgstr "Onvolledige downloads van een vorige sessie aangetroffen."
 
 #: src/gpodder/gtkui/main.py:500
 msgid "Action"
@@ -489,7 +487,7 @@ msgstr "Actie"
 
 #: src/gpodder/gtkui/main.py:547
 msgid "Confirm changes from gpodder.net"
-msgstr "Wijzigingen bevestigen van gpodder.net"
+msgstr "Wijzigingen van gpodder.net bevestigen"
 
 #: src/gpodder/gtkui/main.py:548
 msgid "Select the actions you want to carry out."
@@ -505,7 +503,7 @@ msgstr "Je abonnementen worden geüpload naar de server."
 
 #: src/gpodder/gtkui/main.py:594
 msgid "List uploaded successfully."
-msgstr "Lijst is geüpload."
+msgstr "De lijst is geüpload."
 
 #: src/gpodder/gtkui/main.py:601
 msgid "Error while uploading"
@@ -592,7 +590,7 @@ msgstr[1] "%(queued)d taken in de wachtrij"
 
 #: src/gpodder/gtkui/main.py:1229
 msgid "Please report this problem and restart gPodder:"
-msgstr "Rapporteer dit probleem en herstart gPodder:"
+msgstr "Meld dit probleem en herstart gPodder:"
 
 #: src/gpodder/gtkui/main.py:1230
 msgid "Unhandled exception"
@@ -606,7 +604,7 @@ msgstr "Feedparser-fout: %s"
 #: src/gpodder/gtkui/main.py:1312 src/gpodder/gtkui/model.py:735
 #, python-format
 msgid "ERROR: %s"
-msgstr ""
+msgstr "FOUT: %s"
 
 #: src/gpodder/gtkui/main.py:1433
 msgid "Could not download some episodes:"
@@ -681,7 +679,7 @@ msgstr "Downloadmap openen"
 
 #: src/gpodder/gtkui/main.py:1685
 msgid "Mark episodes as old"
-msgstr "Afleveringen markeren als verouderd"
+msgstr "Afleveringen markeren als oud"
 
 #: src/gpodder/gtkui/main.py:1689 src/gpodder/gtkui/main.py:1950
 msgid "Archive"
@@ -711,17 +709,17 @@ msgid ""
 "Error saving to local folder: %(error)r.\n"
 "Would you like to continue?"
 msgstr ""
-"Kan niet opslaan naar lokale map: %(error)r.\n"
+"Kan niet opslaan in lokale map: %(error)r.\n"
 "Wil je doorgaan?"
 
 #: src/gpodder/gtkui/main.py:1800 src/gpodder/gtkui/main.py:1805
 msgid "Error saving to local folder"
-msgstr "Kan niet opslaan naar lokale map"
+msgstr "Kan niet opslaan in lokale map"
 
 #: src/gpodder/gtkui/main.py:1804
 #, python-format
 msgid "Error saving to local folder: %(error)r"
-msgstr "Kan niet opslaan naar lokale map: %(error)r"
+msgstr "Kan niet opslaan in lokale map: %(error)r"
 
 #: src/gpodder/gtkui/main.py:1825
 msgid "Error converting file."
@@ -729,7 +727,7 @@ msgstr "Fout bij converteren van bestand."
 
 #: src/gpodder/gtkui/main.py:1825
 msgid "Bluetooth file transfer"
-msgstr "Bluetooth bestandsoverdracht"
+msgstr "Bluetooth-bestandsoverdracht"
 
 #: src/gpodder/gtkui/main.py:1878 share/gpodder/ui/gtk/menus.ui.h:21
 msgid "Play"
@@ -815,7 +813,7 @@ msgstr "Website-omleiding gedetecteerd"
 #: src/gpodder/gtkui/main.py:2388
 #, python-format
 msgid "The URL %(url)s redirects to %(target)s."
-msgstr "De URL %(url)s verwijst naar %(target)s."
+msgstr "De url, %(url)s, verwijst naar %(target)s."
 
 #: src/gpodder/gtkui/main.py:2389
 msgid "Do you want to visit the website now?"
@@ -1301,7 +1299,7 @@ msgstr "Authenticatie vereist"
 
 #: src/gpodder/gtkui/interface/common.py:155
 msgid "hostname or root URL (e.g. https://gpodder.net)"
-msgstr "hostnaam of hoofd-URL (bijv. https://gpodder.net)"
+msgstr "hostnaam of hoofd-url (bijv. https://gpodder.net)"
 
 #: src/gpodder/gtkui/interface/common.py:176
 msgid "Server"
@@ -1357,7 +1355,7 @@ msgstr "Selecteer omslaghoes voor nieuwe podcast"
 
 #: src/gpodder/gtkui/desktop/channel.py:172
 msgid "You can only drop a single image or URL here."
-msgstr "Je kunt slechts één afbeelding of URL hierheen slepen."
+msgstr "Je kunt slechts één afbeelding of url hierheen slepen."
 
 #: src/gpodder/gtkui/desktop/channel.py:173
 #: src/gpodder/gtkui/desktop/channel.py:185
@@ -1366,7 +1364,7 @@ msgstr "Slepen-en-neerzetten"
 
 #: src/gpodder/gtkui/desktop/channel.py:184
 msgid "You can only drop local files and http:// URLs here."
-msgstr "Je kunt enkel lokale bestanden en http://-URL's hierheen slepen."
+msgstr "Je kunt enkel lokale bestanden en http://-url's hierheen slepen."
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:100
 msgid "Remove"
@@ -1492,7 +1490,7 @@ msgstr "Documentatie"
 
 #: src/gpodder/gtkui/desktop/preferences.py:372
 msgid "Extension info"
-msgstr "Extensie-informatie"
+msgstr "Informatie over uitbreiding"
 
 #: src/gpodder/gtkui/desktop/preferences.py:377
 msgid "Support the author"
@@ -1500,11 +1498,11 @@ msgstr "Steun de auteur"
 
 #: src/gpodder/gtkui/desktop/preferences.py:419 bin/gpo:1031
 msgid "Extension cannot be activated"
-msgstr "Extensie kan niet worden geactiveerd"
+msgstr "De uitbreiding kan niet worden ingeschakeld"
 
 #: src/gpodder/gtkui/desktop/preferences.py:432
 msgid "Extension module info"
-msgstr "Extensie module-informatie"
+msgstr "Module-informatie over uitbreiding"
 
 #: src/gpodder/gtkui/desktop/preferences.py:469
 msgid "Configure audio player"
@@ -1631,7 +1629,7 @@ msgstr "Bezig met aaneenschakelen van videobestanden"
 #: share/gpodder/extensions/concatenate_videos.py:68
 #, python-format
 msgid "Writing %(filename)s"
-msgstr "Bezig met schrijven van %(filename)s"
+msgstr "Bezig met wegschrijven van %(filename)s"
 
 #: share/gpodder/extensions/concatenate_videos.py:80
 msgid "Videos successfully converted"
@@ -1666,17 +1664,15 @@ msgid "Resume in"
 msgstr "Hervatten over"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:15
-#, fuzzy
 msgid "\"Open website\" episode and podcast context menu"
-msgstr "\"Website openen\" in rechtermuisknopmenu van afleveringen"
+msgstr "\"Website openen\" in rechtermuisknopmenu van afleveringen en podcasts"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:16
-#, fuzzy
 msgid ""
 "Add a context menu item for opening the website of an episode or podcast"
 msgstr ""
 "Voegt een rechtermuisknopmenu-item toe voor het openen van de website van "
-"een aflevering"
+"een aflevering of podcast"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:34
 #: share/gpodder/extensions/episode_website_context_menu.py:37
@@ -1684,36 +1680,32 @@ msgid "Open website"
 msgstr "Website openen"
 
 #: share/gpodder/extensions/filter.py:15
-#, fuzzy
-#| msgid "Delete episodes"
 msgid "Filter Episodes"
-msgstr "Afleveringen verwijderen"
+msgstr "Afleveringen filteren"
 
 #: share/gpodder/extensions/filter.py:16
 msgid "Disable automatic downloads based on episode title."
-msgstr ""
+msgstr "Schakel automatische downloads uit op basis van afleveringstitel."
 
 #: share/gpodder/extensions/filter.py:53
 msgid "Regular Expression"
-msgstr ""
+msgstr "Reguliere expressie"
 
 #: share/gpodder/extensions/filter.py:56
 msgid "Ignore Case"
-msgstr ""
+msgstr "Niet hoofdlettergevoelig"
 
 #: share/gpodder/extensions/filter.py:126
-#, fuzzy
-#| msgid "Filter:"
 msgid "Filter"
-msgstr "Filter:"
+msgstr "Filter"
 
 #: share/gpodder/extensions/filter.py:143
 msgid "Block"
-msgstr ""
+msgstr "Blokkeren"
 
 #: share/gpodder/extensions/filter.py:152
 msgid "Except"
-msgstr ""
+msgstr "Toestaan"
 
 #: share/gpodder/extensions/filter.py:159
 msgid ""
@@ -1722,10 +1714,16 @@ msgid ""
 "episode title, and an empty pattern matches any title.  The except pattern "
 "unblocks blocked episodes (to block all then unblock some)."
 msgstr ""
+"Kruis 'Blokkeren' aan en vul niks in om automatische downloads van alle "
+"afleveringen op dit kanaal uit te schakelen.  Patronen leiden tot een "
+"gedeeltelijke overeenkomst van titels; blanco velden leiden tot "
+"overeenkomsten van alle titels.  'Toestaan' deblokkeert geblokkeerde "
+"afleveringen."
 
 #: share/gpodder/extensions/filter.py:166
 msgid "Filter episodes now (undoes any episodes you marked as old)"
 msgstr ""
+"Afleveringen nu filteren (demarkeert als 'oud' gemarkeerde afleveringen)"
 
 #: share/gpodder/extensions/gtk_statusicon.py:19
 msgid "Gtk Status Icon"
@@ -1822,7 +1820,7 @@ msgstr "Gedownloade bestanden labelen met Mutagen"
 
 #: share/gpodder/extensions/tagging.py:53
 msgid "Add episode and podcast titles to MP3/OGG tags"
-msgstr "Voegt afleverings- en podcasttitels toe aan MP3/OGG-labels"
+msgstr "Voegt afleverings- en podcasttitels toe aan mp3-/ogg-labels"
 
 #: share/gpodder/extensions/taskbar_progress.py:35
 msgid "Show download progress on the taskbar"
@@ -1883,13 +1881,11 @@ msgstr "Videobestanden transcoderen naar avi/mp4/m4v"
 
 #: share/gpodder/extensions/youtube-dl.py:27
 msgid "Manage Youtube subscriptions using youtube-dl (pip install youtube_dl)"
-msgstr ""
+msgstr "YouTube-abonnementen beheren met youtube-dl (pip install youtube_dl)"
 
 #: share/gpodder/extensions/youtube-dl.py:432
-#, fuzzy
-#| msgid "Download to:"
 msgid "Download with Youtube-DL"
-msgstr "Downloaden naar:"
+msgstr "Downloaden met youtube-dl"
 
 #: share/gpodder/ui/gtk/gpodderaddpodcast.ui.h:1
 msgid "Add a new podcast"
@@ -1909,7 +1905,7 @@ msgstr "Feedbijwerkingen uitschakelen (abonnement pauzeren)"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:4
 msgid "Synchronize to MP3 player devices"
-msgstr "Synchroniseren met MP3-spelers"
+msgstr "Synchroniseren met mp3-spelers"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:5
 msgid "Strategy:"
@@ -2148,7 +2144,7 @@ msgstr "Kies uit een lijst van voorbeeldpodcasts"
 
 #: share/gpodder/ui/gtk/gpodderwelcome.ui.h:5
 msgid "Add a podcast by entering its URL"
-msgstr "Voeg een podcast toe door de URL ervan in te voeren"
+msgstr "Voer de url in van een podcast"
 
 #: share/gpodder/ui/gtk/gpodderwelcome.ui.h:6
 msgid "Restore my subscriptions from gpodder.net"
@@ -2179,10 +2175,8 @@ msgid "Download new episodes"
 msgstr "Nieuwe afleveringen downloaden"
 
 #: share/gpodder/ui/gtk/menus.ui.h:11
-#, fuzzy
-#| msgid "Find new podcasts"
 msgid "Find Podcast"
-msgstr "Zoeken naar nieuwe podcasts"
+msgstr "Zoeken naar podcast"
 
 #: share/gpodder/ui/gtk/menus.ui.h:12
 msgid "_Subscriptions"
@@ -2194,7 +2188,7 @@ msgstr "Ontdek nieuwe podcasts"
 
 #: share/gpodder/ui/gtk/menus.ui.h:14
 msgid "Add podcast via URL"
-msgstr "Podcast toevoegen via URL"
+msgstr "Podcast toevoegen via url"
 
 #: share/gpodder/ui/gtk/menus.ui.h:18
 msgid "Import from OPML file"
@@ -2217,10 +2211,8 @@ msgid "Change delete lock"
 msgstr "Vergrendeling veranderen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:28
-#, fuzzy
-#| msgid "Delete episodes"
 msgid "Find Episode"
-msgstr "Afleveringen verwijderen"
+msgstr "Zoeken naar aflevering"
 
 #: share/gpodder/ui/gtk/menus.ui.h:31
 msgid "Sync to device"
@@ -2240,7 +2232,7 @@ msgstr "Afleveringsomschrijvingen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:35
 msgid "Always show Find entries"
-msgstr ""
+msgstr "Zoekbalken altijd tonen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:37
 msgid "Hide deleted episodes"
@@ -2264,16 +2256,16 @@ msgstr "Zichtbare kolommen"
 
 #: bin/gpo:267
 msgid "Podcast update requested by extensions."
-msgstr "Podcast-update vereist door extensies."
+msgstr "Podcast-update vereist door uitbreidingen."
 
 #: bin/gpo:271
 msgid "Episode download requested by extensions."
-msgstr "Downloaden van aflevering vereist door extensies."
+msgstr "Downloaden van aflevering vereist door uitbreidingen."
 
 #: bin/gpo:324
 #, python-format
 msgid "Invalid url: %s"
-msgstr "Ongeldige URL: %s"
+msgstr "Ongeldige url: %s"
 
 #: bin/gpo:346
 msgid "User name:"
@@ -2385,7 +2377,7 @@ msgstr "Ongeldige waarde."
 #: bin/gpo:795
 #, python-format
 msgid "Invalid URL: %s"
-msgstr "Ongeldige URL: %s"
+msgstr "Ongeldige url: %s"
 
 #: bin/gpo:798
 #, python-format
@@ -2431,56 +2423,49 @@ msgstr "Bezig met synchroniseren van %s"
 
 #: bin/gpo:979
 msgid "(enabled)"
-msgstr ""
+msgstr "(ingeschakeld)"
 
 #: bin/gpo:990
 msgid "Title:"
-msgstr ""
+msgstr "Titel:"
 
 #: bin/gpo:991
-#, fuzzy
 #| msgid "Strategy:"
 msgid "Category:"
-msgstr "Beleid:"
+msgstr "Categorie:"
 
 #: bin/gpo:992
-#, fuzzy
-#| msgid "Section:"
 msgid "Description:"
-msgstr "Sectie:"
+msgstr "Omschrijving:"
 
 #: bin/gpo:993
 msgid "Authors:"
-msgstr ""
+msgstr "Makers:"
 
 #: bin/gpo:995
-#, fuzzy
-#| msgid "Documentation"
 msgid "Documentation:"
-msgstr "Documentatie"
+msgstr "Documentatie:"
 
 #: bin/gpo:996
 msgid "Enabled:"
-msgstr ""
+msgstr "Ingeschakeld:"
 
 #: bin/gpo:996
 msgid "no"
-msgstr ""
+msgstr "nee"
 
 #: bin/gpo:1021
 msgid "enabled"
-msgstr ""
+msgstr "ingeschakeld"
 
 #: bin/gpo:1021
-#, fuzzy
-#| msgid "Updates disabled"
 msgid "disabled"
-msgstr "Bijwerken uitgeschakeld"
+msgstr "uitgeschakeld"
 
 #: bin/gpo:1024
 #, python-format
 msgid "Extension %(name)s (%(title)s) %(enabled)s"
-msgstr ""
+msgstr "De uitbreiding '%(name)s (%(title)s)' is %(enabled)s"
 
 #: bin/gpo:1104
 #, python-format
@@ -2497,17 +2482,15 @@ msgstr "De opgevraagde functie is niet beschikbaar."
 
 #: bin/gpodder:100
 msgid "print logging output on the console"
-msgstr "loguitvoer printen in het terminalvenster"
+msgstr "loguitvoer printen in terminalvenster"
 
 #: bin/gpodder:104
-#, fuzzy
-#| msgid "print logging output on the console"
 msgid "reduce warnings on the console"
-msgstr "loguitvoer printen in het terminalvenster"
+msgstr "waarschuwingen in terminalvenster onderdrukken"
 
 #: bin/gpodder:107
 msgid "subscribe to the feed at URL"
-msgstr "abonneren op feed van URL"
+msgstr "abonneren op feed van url"
 
 #: bin/gpodder:112
 msgid "Mac OS X application process number"
