--- a/po/nn.po
+++ b/po/nn.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-14 16:08+0200\n"
-"PO-Revision-Date: 2020-04-04 14:54+0200\n"
+"PO-Revision-Date: 2020-06-21 11:08+0200\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <l10n-no@lister.huftis.org>\n"
 "Language: nn\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 19.12.3\n"
+"X-Generator: Lokalize 20.07.70\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -311,10 +311,9 @@ msgid "Cannot open device"
 msgstr "Klarte ikkje opna eining"
 
 #: src/gpodder/syncui.py:91
-#, fuzzy
 #| msgid "Please check the settings in the preferences dialog."
 msgid "Please check logs and the settings in the preferences dialog."
-msgstr "Sjå til at innstillingane er rette."
+msgstr "Kontroller loggane og sjå til at program­innstillingane er rette."
 
 #: src/gpodder/syncui.py:138
 msgid "Not enough space left on device"
@@ -1404,8 +1403,7 @@ msgstr "storleik: %s"
 #: src/gpodder/gtkui/desktop/exportlocal.py:57
 #, python-format
 msgid "Export remaining %(count)d episode to this folder with its default name"
-msgid_plural ""
-"Export remaining %(count)d episodes to this folder with their default name"
+msgid_plural "Export remaining %(count)d episodes to this folder with their default name"
 msgstr[0] ""
 "Eksporter gjenståande %(count)d episode til denne mappa, med standardnamn"
 msgstr[1] ""
@@ -2178,10 +2176,9 @@ msgid "Download new episodes"
 msgstr "Last ned nye episodar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:11
-#, fuzzy
 #| msgid "Find new podcasts"
 msgid "Find Podcast"
-msgstr "Finn nye podkastar"
+msgstr "Filtrer podkastar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:12
 msgid "_Subscriptions"
@@ -2216,7 +2213,6 @@ msgid "Change delete lock"
 msgstr "Slå på/av slettelås"
 
 #: share/gpodder/ui/gtk/menus.ui.h:28
-#, fuzzy
 #| msgid "Filter Episodes"
 msgid "Find Episode"
 msgstr "Filtrer episodar"
@@ -2239,7 +2235,7 @@ msgstr "Episodeskildringar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:35
 msgid "Always show Find entries"
-msgstr ""
+msgstr "Vis alltid filtreringsfelta"
 
 #: share/gpodder/ui/gtk/menus.ui.h:37
 msgid "Hide deleted episodes"
@@ -2492,10 +2488,9 @@ msgid "print logging output on the console"
 msgstr "Skriv loggdata på konsollen"
 
 #: bin/gpodder:104
-#, fuzzy
 #| msgid "print logging output on the console"
 msgid "reduce warnings on the console"
-msgstr "Skriv loggdata på konsollen"
+msgstr "reduser talet på åtvaringar på konsollen"
 
 #: bin/gpodder:107
 msgid "subscribe to the feed at URL"
