--- a/po/nn.po
+++ b/po/nn.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-14 16:08+0200\n"
+"POT-Creation-Date: 2020-06-21 16:14+0200\n"
 "PO-Revision-Date: 2020-06-21 11:08+0200\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <l10n-no@lister.huftis.org>\n"
@@ -311,7 +311,6 @@ msgid "Cannot open device"
 msgstr "Klarte ikkje opna eining"
 
 #: src/gpodder/syncui.py:91
-#| msgid "Please check the settings in the preferences dialog."
 msgid "Please check logs and the settings in the preferences dialog."
 msgstr "Kontroller loggane og sjå til at program­innstillingane er rette."
 
@@ -1403,7 +1402,8 @@ msgstr "storleik: %s"
 #: src/gpodder/gtkui/desktop/exportlocal.py:57
 #, python-format
 msgid "Export remaining %(count)d episode to this folder with its default name"
-msgid_plural "Export remaining %(count)d episodes to this folder with their default name"
+msgid_plural ""
+"Export remaining %(count)d episodes to this folder with their default name"
 msgstr[0] ""
 "Eksporter gjenståande %(count)d episode til denne mappa, med standardnamn"
 msgstr[1] ""
@@ -2176,7 +2176,6 @@ msgid "Download new episodes"
 msgstr "Last ned nye episodar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:11
-#| msgid "Find new podcasts"
 msgid "Find Podcast"
 msgstr "Filtrer podkastar"
 
@@ -2213,7 +2212,6 @@ msgid "Change delete lock"
 msgstr "Slå på/av slettelås"
 
 #: share/gpodder/ui/gtk/menus.ui.h:28
-#| msgid "Filter Episodes"
 msgid "Find Episode"
 msgstr "Filtrer episodar"
 
@@ -2488,7 +2486,6 @@ msgid "print logging output on the console"
 msgstr "Skriv loggdata på konsollen"
 
 #: bin/gpodder:104
-#| msgid "print logging output on the console"
 msgid "reduce warnings on the console"
 msgstr "reduser talet på åtvaringar på konsollen"
 
