--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-21 16:14+0200\n"
 "PO-Revision-Date: 2019-02-13 22:16+0100\n"
-"Last-Translator: Maxim Prohorov <prohorov.max@gmail.com>\n"
+"Last-Translator: mrKaban <КонтинентСвободы.рф>\n"
 "Language-Team: \n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
