--- a/po/ru.po
+++ b/po/ru.po
@@ -2454,7 +2454,7 @@ msgstr "Заголовок:"
 #, fuzzy
 #| msgid "Strategy:"
 msgid "Category:"
-msgstr "Способ удаления:"
+msgstr "Категория:"
 
 #: bin/gpo:992
 #, fuzzy
