--- a/po/ru.po
+++ b/po/ru.po
@@ -1736,7 +1736,7 @@ msgid ""
 msgstr ""
 "Если установить флажок блокировки и оставить его пустым, автоматическая загрузка "
 "всех выпусков на этом канале будет отключена. Шаблоны соответствуют частичному тексту "
-"в названии эпизода, а пустой шаблон соответствует любому заголовку. Шаблон "except" "
+"в названии эпизода, а пустой шаблон соответствует любому заголовку. Шаблон except "
 "разблокирует заблокированные эпизоды (чтобы заблокировать все, а затем разблокировать некоторые)."
 
 #: share/gpodder/extensions/filter.py:166
