update fr translations

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-11-06 17:18+0100\n"
-"PO-Revision-Date: 2020-06-14 16:21+0200\n"
+"PO-Revision-Date: 2020-11-06 17:23+0100\n"
 "Last-Translator: Eric Le Lay <elelay@macports.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
 "fr/)\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -879,13 +879,11 @@ msgstr "Mise à jour de %(podcast)s (%(position)d/%(total)d)"
 #: src/gpodder/gtkui/main.py:2667
 #, python-format
 msgid "%d channel(s) failed to update"
-msgstr ""
+msgstr "%d flux n'ont pas été mis à jour"
 
 #: src/gpodder/gtkui/main.py:2668
-#, fuzzy
-#| msgid "Error while updating feed"
 msgid "Error while updating feeds"
-msgstr "Erreur durant la mise à jour du flux"
+msgstr "Erreur durant la mise à jour des flux"
 
 #: src/gpodder/gtkui/main.py:2694
 msgid "No new episodes"
@@ -2032,10 +2030,8 @@ msgid "Preferred YouTube format:"
 msgstr "Format YouTube privilégié : "
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:8
-#, fuzzy
-#| msgid "Preferred YouTube format:"
 msgid "Preferred YouTube HLS format:"
-msgstr "Format YouTube privilégié : "
+msgstr "Format YouTube privilégié (HLS) : "
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Preferred Vimeo format:"
@@ -2430,7 +2426,7 @@ msgid ""
 msgstr ""
 "Index de l'épisode à (dé)sélectionner : '?' pour afficher la liste, 'X' pour "
 "tout sélectionner, 'Espace' pour tout déselectionner, 'Entrée' quand vous "
-"êtes satisfait."
+"êtes satisfait"
 
 #: bin/gpo:932
 #, python-format
