Updated Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-11-06 17:18+0100\n"
-"PO-Revision-Date: 2020-06-15 13:21+0200\n"
+"PO-Revision-Date: 2020-11-07 14:04+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/gpodder/language/"
 "nl/)\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.3.1\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -31,7 +31,7 @@ msgstr "gPodder op %s"
 #: src/gpodder/deviceplaylist.py:98
 #, python-format
 msgid "Folder %s could not be created."
-msgstr "De map %s kan niet worden gecreëerd."
+msgstr "De map %s kan niet worden aangemaakt."
 
 #: src/gpodder/deviceplaylist.py:98
 msgid "Error writing playlist"
@@ -108,7 +108,7 @@ msgstr "Ontbrekende serverinhoud"
 #: src/gpodder/download.py:937
 #, python-format
 msgid "I/O Error: %(error)s: %(filename)s"
-msgstr "In-/uitvoerfout: %(error)s: %(filename)s"
+msgstr "In-/Uitvoerfout: %(error)s: %(filename)s"
 
 #: src/gpodder/download.py:944
 #, python-format
@@ -870,13 +870,11 @@ msgstr "Bezig met bijwerken van %(podcast)s (%(position)d/%(total)d)"
 #: src/gpodder/gtkui/main.py:2667
 #, python-format
 msgid "%d channel(s) failed to update"
-msgstr ""
+msgstr "%d kanaal/kanalen kan/kunnen niet worden bijgewerkt"
 
 #: src/gpodder/gtkui/main.py:2668
-#, fuzzy
-#| msgid "Error while updating feed"
 msgid "Error while updating feeds"
-msgstr "Fout tijdens bijwerken van feed"
+msgstr "Fout tijdens bijwerken van feeds"
 
 #: src/gpodder/gtkui/main.py:2694
 msgid "No new episodes"
@@ -2010,10 +2008,8 @@ msgid "Preferred YouTube format:"
 msgstr "Voorkeur voor YouTube-formaat:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:8
-#, fuzzy
-#| msgid "Preferred YouTube format:"
 msgid "Preferred YouTube HLS format:"
-msgstr "Voorkeur voor YouTube-formaat:"
+msgstr "Voorkeur voor YouTube HLS-formaat:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Preferred Vimeo format:"
@@ -2075,7 +2071,7 @@ msgstr "Opruiming"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:27
 msgid "Device type:"
-msgstr "Apparaatsoort:"
+msgstr "Soort apparaat:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:28
 msgid "Mountpoint:"
@@ -2087,7 +2083,7 @@ msgstr "Na het synchroniseren van een aflevering:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:30
 msgid "Create playlists on device"
-msgstr "Afspeellijsten creëren op apparaat"
+msgstr "Afspeellijsten samenstellen op apparaat"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:31
 msgid "Playlists Folder:"
